<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_main"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.anwar.alodoktertest.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >

        <action android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/navigation_login"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anwar.alodoktertest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action android:id="@+id/action_open_hero_detail"
            app:destination="@id/navigation_detail"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.anwar.alodoktertest.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="hero_item"
            app:argType="com.anwar.alodoktertest.domain.Hero"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.anwar.alodoktertest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>